# stepgate

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.stepgate/: config.json  history.jsonl
.stepgate/sessions/: claude-2026-07-09-1.json  claude-2026-07-13-1.json  claude-2026-07-13-2.json  claude-2026-07-22-1.json  claude-2026-07-22-2.json  claude-2026-07-22-3.json  claude-2026-07-22-4.json  codex-2026-07-13-1.json
src/stepgate/: __init__.py  __main__.py  cli.py  model.py  render.py  store.py
src/stepgate/commands/: doctor.py  init_cmd.py  lifecycle.py  views.py
tests/: conftest.py  test_cli_smoke.py  test_init.py  test_state_machine.py  test_store.py
